--- a/js_repaso/index.html
+++ b/js_repaso/index.html
@@ -13,5 +13,5 @@
 
         </div>
     </body>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="clases.js" type="text/javascript"></script>
 </html>
